--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -33,6 +33,7 @@
         <!-- oshi监控需要指定jna版本, 问题详见 https://github.com/oshi/oshi/issues/1040 -->
         <jna.version>5.9.0</jna.version>
         <oshi.version>6.1.4</oshi.version>
+        <jol.version>0.16</jol.version>
     </properties>
 
     <dependencies>
@@ -106,6 +107,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <!--    jol查看Java对象的内存布局    -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>${jol.version}</version>
         </dependency>
     </dependencies>
 
