--- a/eladmin-search/src/main/resources/config/application-dev.yml
+++ b/eladmin-search/src/main/resources/config/application-dev.yml
@@ -74,18 +74,8 @@ spring:
   redis:
     #详细版的redisson配置可参考：https://github.com/redisson/redisson/tree/master/redisson-spring-boot-starter
     enable: true
-    # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
-    url: redis://10.211.55.140:6379
-    timeout: 2000 # 连接或读取超时时长（毫秒）
-    database: 0
     redisson:
-      file: classpath:redisson.yml
-    jedis:
-      pool:
-        max-active: 10  # 连接池最大连接数（使用负值表示没有限制）
-        max-wait: 800 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-idle: 5 # 连接池中的最大空闲连接
-        min-idle: 2 # 连接池中的最小空闲连接
+      file: classpath:redisson.yaml
 
   ##### RabbitMQ ####
   rabbitmq:
