--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,13 @@
                 </exclusions>
             </dependency>
 
+            <!--工具包-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
             <!-- ip2region IP库 -->
             <dependency>
                 <groupId>net.dreamlu</groupId>
