添加通过配置对所有请求放行。swarm化的准备进行的差不多了，也许4月份就能出一版

--- a/eladmin-starter/src/main/resources/config/application.yml
+++ b/eladmin-starter/src/main/resources/config/application.yml
@@ -101,6 +101,8 @@ local:
     load-os: true
     # 使用多个策略配置。默认false
     multi-security: false
+    # 关闭权限验证，默认false
+    unauth: false
     # 表名映射
     table-name:
       user: sys_user
