--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -30,8 +30,9 @@
     <name>搜索服务-MongoDB</name>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>18</java.version>
         <project.core.version>3.0.1</project.core.version>
+        <maven.compiler.release>17</maven.compiler.release>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <druid.version>1.2.8</druid.version>
     </properties>
@@ -214,8 +215,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <!--for lombok annotations to resolve-->
