--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -30,8 +30,9 @@
     <name>启动模块-基础</name>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>18</java.version>
         <project.core.version>3.0.1</project.core.version>
+        <maven.compiler.release>17</maven.compiler.release>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <javassist.version>3.28.0-GA</javassist.version>
         <shardingsphere.version>5.0.0</shardingsphere.version>
@@ -228,8 +229,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <!--for lombok annotations to resolve-->
