--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,17 @@
         <!--    Spring Boot依赖版本配置：https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#dependency-versions.properties    -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>17</java.version>
+        <!--开发版本-->
+        <java.version>18</java.version>
         <project.core.version>3.0.1</project.core.version>
+        <!--支持Java 18-->
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <!--https://maven.apache.org/plugins/maven-compiler-plugin/-->
+        <!--<maven.compiler.source>17</maven.compiler.source>-->
+        <!--<maven.compiler.target>17</maven.compiler.target>-->
+        <!--Starting JDK 9, release can be used to do the things what source and target can do
+        https://maven.apache.org/plugins/maven-compiler-plugin/examples/set-compiler-release.html-->
+        <maven.compiler.release>17</maven.compiler.release>
         <log4jdbc.version>1.16</log4jdbc.version>
         <springdoc.openapi.version>1.6.6</springdoc.openapi.version>
         <io.swagger.version>1.6.4</io.swagger.version>
@@ -303,9 +312,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <!--<release>16</release>-->
                     <!--<fork>true</fork>-->
                     <!--for unmappable characters in classes-->
                     <!-- <encoding>UTF-8</encoding>-->
