--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -63,6 +63,24 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+  rabbitmq-p2:
+    image: rabbitmq:3.9.9-management
+    container_name: rabbitmq-p2
+    volumes:
+      - /mydata/rabbitmq-p2/data:/var/lib/rabbitmq #数据文件挂载
+      - /mydata/rabbitmq-p2/log:/var/log/rabbitmq #日志文件挂载
+    ports:
+      - 5674:5672
+      - 15674:15672
+  rabbitmq-p3:
+    image: rabbitmq:3.9.9-management
+    container_name: rabbitmq-p3
+    volumes:
+      - /mydata/rabbitmq-p3/data:/var/lib/rabbitmq #数据文件挂载
+      - /mydata/rabbitmq-p3/log:/var/log/rabbitmq #日志文件挂载
+    ports:
+      - 5676:5672
+      - 15676:15672
   elasticsearch:
     image: elasticsearch:7.14.2
     container_name: elasticsearch
