--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <!--开发版本-->
         <java.version>18</java.version>
         <project.core.version>3.0.1</project.core.version>
-        <!--支持Java 18-->
+        <!--支持Java 18，问题不在这，这里不升级也没啥问题，用release就可以了-->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <!--https://maven.apache.org/plugins/maven-compiler-plugin/-->
         <!--<maven.compiler.source>17</maven.compiler.source>-->
