基于Caffeine的本地缓存方案

--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>druid</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
         <!-- Java图形验证码。该项目在gitee上有 -->
         <dependency>
             <groupId>com.github.whvcse</groupId>
