--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -114,6 +114,10 @@
             <groupId>com.github.whvcse</groupId>
             <artifactId>easy-captcha</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.anji-plus</groupId>
+            <artifactId>spring-boot-starter-captcha</artifactId>
+        </dependency>
 
         <!-- linux的管理 -->
         <dependency>
