--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,13 @@
                 <artifactId>easy-captcha</artifactId>
                 <version>1.6.2</version>
             </dependency>
+            <!--      滑动验证码      -->
+            <dependency>
+                <groupId>com.anji-plus</groupId>
+                <artifactId>spring-boot-starter-captcha</artifactId>
+                <version>1.3.0</version>
+            </dependency>
+
             <!-- 从 Ehcache 到 Guava Cache 再到 Caffeine -->
             <dependency>
                 <groupId>com.github.ben-manes.caffeine</groupId>
