--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -33,6 +33,7 @@
         <java.version>18</java.version>
         <project.core.version>3.0.3</project.core.version>
         <maven.compiler.release>17</maven.compiler.release>
+        <lombok.version>1.18.24</lombok.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <druid.version>1.2.8</druid.version>
     </properties>
