@Value及@ConfigurationProperties都是支持对象、数组、集、集合的注入，@Value还支持SpEL表达式，具体Google

--- a/eladmin-starter/src/main/resources/config/application.yml
+++ b/eladmin-starter/src/main/resources/config/application.yml
@@ -110,3 +110,8 @@ local:
     sp-sync-queue: xs.sp-sync.queue
     # 某个Bean的定义方式，默认不使用BeanFactoryPostProcessor来定义她
     init-bf: false
+    #   这里试试数组类的，也可以参考file那边整成实体
+    extra-ut:
+      list:
+        - { name: 'FOUR',type: 4, desc: '猜猜我是谁' }
+        - { name: 'FIVE',type: 5, desc: 'you know who' }
