MapStruct和Spring Converter，有些 画蛇添足 了

--- a/eladmin-common/pom.xml
+++ b/eladmin-common/pom.xml
@@ -180,6 +180,10 @@
             <artifactId>mapstruct-processor</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct.extensions.spring</groupId>
+            <artifactId>mapstruct-spring-extensions</artifactId>
+        </dependency>
 
         <!--   具体可以看看这个，https://jcp.org/en/jsr/detail?id=330     -->
         <dependency>
