--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
         <commons-pool2.version>2.11.1</commons-pool2.version>
         <!--mapstruct也要用新版本才行-->
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <mapstruct.spring.version>0.1.1</mapstruct.spring.version>
         <!--logstash有所依赖，需要使用management统一管理依赖-->
         <logstash.version>7.1.1</logstash.version>
         <!--  LDAP（Lightweight Directory Access Protocol轻量目录访问协议） logback也来了 https://logback.qos.ch/news.html     -->
@@ -220,6 +221,13 @@
                 <version>${mapstruct.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <!--     https://mapstruct.org/news/2022-02-07-mapstruct-spring-extensions-0-1-1-released/       -->
+            <dependency>
+                <groupId>org.mapstruct.extensions.spring</groupId>
+                <artifactId>mapstruct-spring-extensions</artifactId>
+                <version>${mapstruct.spring.version}</version>
+            </dependency>
+
             <!--   具体可以看看这个，https://jcp.org/en/jsr/detail?id=330     -->
             <dependency>
                 <groupId>javax.inject</groupId>
